<resources>
    <string name="app_name">MyQuote</string>

    <!-- Quote category recycler view item -->
    <string name="image_content_description">Icon of current category</string>

    <!-- QuoteCategory recyclerView empty view -->
    <string name="title_empty_view">You have no quotes</string>
    <string name="title_empty_view_push">Push</string>
    <string name="title_empty_view_button">button</string>

    <!-- AddQuoteActivity-->
    <string name="toast_choose_category">Choose category</string>

    <!-- AddQuoteFragment-->
    <string name="hint_quote_text">Quote text</string>
    <string name="hint_book_name">Book name</string>
    <string name="hint_author_name">Book author</string>
    <string name="hint_page_number">Page number</string>
    <string name="hint_year_number">Year</string>
    <string name="hint_publish_name">Publisher name</string>
    <string name="spinner_add_category">+ add new category</string>
    <string name="spinner_hint">Select quote category</string>
    <string name="spinner_label">Category</string>
    <string name="quote_text_empty_error">Quote text cannot be empty</string>
    <string name="author_name_empty_error">Author name cannot be empty</string>
    <string name="page_number_error">Page number cannot be negative</string>
    <string name="year_number_error">Year number cannot be negative</string>

    <!-- Add category dialog -->
    <string name="dialog_add_category_title">Enter the category name</string>
    <string name="dialog_add_category_ok">OK</string>
    <string name="dialog_add_category_cancel">CANCEL</string>

    <!-- Delete quote category dialog -->
    <string name="dialog_delete_category_title">Delete current category?</string>
    <string name="dialog_delete_current_quote_title">Delete current quote?</string>
    <string name="dialog_ok_button">DELETE</string>
    <string name="dialog_cancel_button">CANCEL</string>

    <!-- Menu -->
    <string name="delete_title">Delete quote</string>
    <string name="action_settings">Settings</string>
    <string name="delete_quote_category">Delete quote category</string>
    <string name="delete_current_quote">Delete quote</string>
    <string name="filter_quote">Filter quote</string>
    <string name="share">Share</string>
    <string name="search">Search quote</string>
    <string name="settings">Settings</string>

    <!-- Popup menu -->
    <string name="sort_by_author">Author</string>
    <string name="sort_by_book_name">Book name</string>
    <string name="sort_by_year">Year</string>
    <string name="sort_by_publisher">Publisher</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="book_quote_type">Book quote</string>
    <string name="my_quote_type">My quote</string>
    <string name="get_idea">Get idea</string>

    <!-- CurrentQuotePagerActivity -->
    <string name="quote_author_title">Quote author:</string>
    <string name="book_name_title">Book name:</string>
    <string name="publisher_name_title">Book publisher:</string>
    <string name="year_number_title">Year:</string>
    <string name="page_number_title">Page:</string>
    <string name="current_category_title">Category:</string>
    <string name="quote_creation_date_title">Quote creation date:</string>
    <string name="default_value"> - </string>

    <!-- GetIdeaActivity -->
    <string name="type_word">Enter the idea subject</string>
    <string name="enter_text">Enter text here</string>
    <string name="other_action">or just push the button</string>
    <string name="idea_button_text">Generate idea!</string>
    <string name="idea_title">Get idea</string>
    <string name="idea_toast">You have no quote with this subject</string>

    <!-- Snackbar -->
    <string name="quote_is_deleted">Quote is deleted!</string>
    <string name="quote_category">"Quote category "</string>
    <string name="is_deleted">" is deleted!"</string>

</resources>
